# ReportPDFConverter

./: .gitattributes  .gitignore  Dockerfile  PDFMerge.py  README.md  WordToPDFConverter.py  app.py  desktop_app.py  docx_image_preprocessor.py  email_service.py  libreoffice_uno_converter.py  order.json  pdf_merge.py  pyproject.toml  registrymodifications.xcu  report_pdf_converter.spec  requirements.txt  tray_launcher.py  word_file_prefixer.py  word_to_pdf_converter.py
Python版/: .gitattributes  README.md
Python版/python/: app.py  tray_launcher.py
Python版/templates/: index.html  order.html  status.html
Rust版/: .env.sample  Cargo.toml  README.md  build.rs
Rust版/installer/: ReportPDFConverter.iss
Rust版/lab_members/: faculty_contacts.json
Rust版/scripts/: build_installer.ps1
Rust版/src/: main.rs
Rust版/templates/: default_order_editor.html  index.html  order.html  recipient_selector.html  status.html
Rust版/web/: index.html
data/: order.json
fonts/: HGRGE.TTC  HGRGM.TTC  HGRMB.TTC  HGRPP1.TTC  HGRPRE.TTC  HGRSGU.TTC  cambria.ttc  coure.fon  jsmalle.fon  jvgafix.fon  jvgasys.fon  modern.fon  roman.fon  script.fon  serife.fon  vga932.fon
lab_members/: order.json
python/: email_service.py
templates/: default_order_editor.html  index.html  order.html  recipient_selector.html  status.html
