[project]
name = "reportpdfconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "dotenv==0.9.9",
    "flask==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "pypdf2==3.0.1",
    "pyqt6>=6.10.0",
    "python-dotenv==1.1.1",
    "pywin32==311 ; sys_platform == 'win32'",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "werkzeug==3.1.3",
]
