[package]
name = "report-pdf-converter"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
encoding_rs = "0.8"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "hostname", "pool", "native-tls"] }
lopdf = "0.39"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"
zip = "2.4"

[target.'cfg(windows)'.dependencies]
tao = "0.34"
tray-icon = "0.21"
winreg = "0.55"

[build-dependencies]
ico = "0.4"
resvg = "0.44"
usvg = "0.44"
winres = "0.1"
